<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TripMileage</string>
    <string name="title_task_detail">Trip Detail</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="additem">Add Trip</string>
    <string name="email">E-mail Report</string>
    <string name="save">Save</string>
    <string name="tripTitle"><b>Trip Title</b></string>
    <string name="date"><b>Date Created</b></string>
    <string name="startMileage"><b>Start Miles</b></string>
    <string name="endMileage"><b>End Miles</b></string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="footer_mileage_activity"><i>Press Add Trip to create a new trip.  Click on the trip to edit it.</i></string>
    <string name="reimbursement"><b>Reimbursement</b></string>
    <string name="trip_updated"><b>Trip has been updated.</b></string>

</resources>
