<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/fragmenttaskdetail"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="biz.cssconsulting.TripMileage.TaskDetailFragment" >

        <TableLayout
            android:id="@+id/mainTable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:paddingLeft="3dip"
            android:paddingRight="3dip"
            android:shrinkColumns="1"
            android:stretchColumns="*" >

            <TableRow>

                <EditText
                    android:id="@+id/detailstext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/tripTitle"
                    android:text="@string/tripTitle" />

                <TextView
                    android:id="@+id/detailstextdesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/tripTitle"
                    android:textIsSelectable="true" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/detailstext2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/startMileage"
                    android:inputType="number"
                    android:text="@string/startMileage" />

                <TextView
                    android:id="@+id/detailstext2desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/startMileage"
                    android:textIsSelectable="true" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/detailstext3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/endMileage"
                    android:inputType="number"
                    android:text="@string/endMileage" />

                <TextView
                    android:id="@+id/detailstext3desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/endMileage"
                    android:textIsSelectable="true" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/detailstext4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/reimbursement"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailstext4desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/reimbursement"
                    android:textIsSelectable="true" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/detailstext1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/date"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailstext1desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/date"
                    android:textIsSelectable="true" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainTable"
            android:clickable="true"
            android:text="@string/save" />
    </RelativeLayout>

</ScrollView>